--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body{
   border: var(--clr-neon) 4px solid;
   padding: 0.525em 1em;
   border-radius: .25em;
-  text-shadow: 0 0 0.125em green, 0 0 0.425em white;
+  text-shadow: 0 0 0.125em green, 0 0 0.425em #9ef7d4;
   box-shadow: inset 0 0 0.5em 0 var(--clr-neon),
     0 0 0.5em 0 var(--clr-neon);
   position: relative;
@@ -46,7 +46,7 @@ body{
 .neon-sign:hover{
   box-shadow: inset 0 0 0.9em 0 var(--clr-neon),
   0 0 0.9em 0 var(--clr-neon);
-  text-shadow: 0 0 0.125em darkgreen, 0 0 0.825em white;
+  text-shadow: 0 0 0.125em darkgreen, 0 0 0.825em #9ef7d4;
 }
 
 .neon-sign:hover::before{
